Fixing Code word-wrap

--- a/_src/less/main.less
+++ b/_src/less/main.less
@@ -21,11 +21,8 @@ body {
   margin-left:auto;
   margin-right:auto;
   background: url('http://matrixfox.com/images/stressed_linen.png') center center;
-  // wordpress
-  //background: url('/wp-content/themes/ocultism/images/stressed_linen.png') center center;
   background-color: #000;
   color: #fff;
-  word-wrap:break-word;
 }
 img {
   max-width: @fluid-max-width;
@@ -191,7 +188,6 @@ body {
   background: url('/images/stressed_linen.png') center center;
   background-color: #000;
   color: #fff;
-  word-wrap:break-word;
 }
 
 a {
