--- a/_src/less/reset.less
+++ b/_src/less/reset.less
@@ -1,3 +1,8 @@
+pre {
+  word-break: normal;
+  word-wrap: normal;
+}
+
 h1, h2, h3 {
 margin-top: 0px;
 margin-bottom: 0px;
@@ -8,14 +13,9 @@ margin: 0 0 0px;
 button:focus {
 outline: -webkit-focus-ring-color none;
 }
-code {
-white-space: normal;
-}
 
 .nav>li>a {
   padding: 10px 0px;
-//wordpress
-//  padding: 0px 0px;
 }
 
 .navbar {
